# giotto-ph

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_AUTHORS.rst  CODE_OF_CONDUCT.rst  CODE_OWNERS.rst  DEED_OF_CONTRIBUTION.rst  GOVERNANCE.rst  README.md  README.rst  RELEASE.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  deploy-github-pages.yml  wheels.yml
docs/: index.html
docs/source/: conf.py  index.rst  installation.rst
docs/source/modules/: index.rst  ripser_parallel.rst
examples/: basic_tutorial.ipynb  flag_persistence_generators.ipynb
examples/.ipynb_checkpoints/: basic_tutorial-checkpoint.ipynb
giotto_ph/: _version.py
giotto_ph/bindings/: ripser_bindings.cpp
giotto_ph/cpp/: Flag_complex_edge_collapser.h
giotto_ph/inc/common/: concurrent_hash_map.hpp  para_sort.hpp  reclamation.hpp
giotto_ph/python/: __init__.py  ripser_interface.py
giotto_ph/src/: ripser.cpp  ripser.h
giotto_ph/test/: test_collapser.py  test_ripser.py  test_wrp.py
gph/: __init__.py  _version.py
gph/bindings/: collapser_bindings.cpp  ripser_bindings.cpp
gph/python/: __init__.py  ripser_interface.py
gph/python/test/: test_collapser.py  test_ripser.py  test_wrp.py
gph/src/: Flag_complex_edge_collapser.h  ripser.h
gph/test/: test_collapser.py  test_ripser.py  test_wrp.py
src/bindings/: collapser_bindings.cpp
